# varnish-modules

./: .gitignore  .travis.yml  0001-Create-0001-Update.patch.patch  0001-Update.patch  AUTHORS  CHANGES.rst  Makefile.am  README.md  README.rst  bootstrap  configure.ac  meson.build  test-vclsnippet
.circleci/: Dockerfile  config.yml
doc/: nonstandard-location.rst  vmod_cookie.man.rst  vmod_cookie.rst  vmod_header.man.rst  vmod_header.rst  vmod_saintmode.man.rst  vmod_saintmode.rst  vmod_softpurge.man.rst  vmod_softpurge.rst  vmod_tcp.man.rst  vmod_tcp.rst  vmod_var.man.rst  vmod_var.rst  vmod_vsthrottle.man.rst  vmod_vsthrottle.rst  vmod_xkey.man.rst  vmod_xkey.rst
docs/: Makefile.am  cookie.rst  vmod_cookie.rst  vmod_header.rst  vmod_saintmode.rst  vmod_softpurge.rst  vmod_tcp.rst  vmod_var.rst  vmod_vsthrottle.rst  vmod_xkey.rst
src/: Makefile.am  vmod_accept.vcc  vmod_bodyaccess.c  vmod_bodyaccess.vcc  vmod_cookie.c  vmod_cookie.vcc  vmod_header.c  vmod_header.vcc  vmod_saintmode.c  vmod_saintmode.vcc  vmod_softpurge.c  vmod_softpurge.vcc  vmod_str.c  vmod_str.vcc  vmod_tcp.c  vmod_tcp.vcc  vmod_uuid.c  vmod_uuid.vcc  vmod_var.c  vmod_var.vcc  vmod_vsthrottle.c  vmod_vsthrottle.vcc  vmod_xkey.c  vmod_xkey.vcc  xkey.vsc
src/tests/accept/: test01.vtc  test02.vtc
src/tests/bodyaccess/: test01.vtc  test03.vtc  test04.vtc  test05.vtc
src/tests/bodyaccess/41/: test02.vtc  test03.vtc  test04.vtc
src/tests/bodyaccess/5x/: test02.vtc  test03.vtc  test04.vtc
src/tests/cookie/: 04-filter.vtc  04-keep.vtc  31-filter_re.vtc  31-get_re.vtc  31-get_regex.vtc  32-filter_regex.vtc  32_filter_re.vtc  33-keep_re.vtc  33-keep_regex.vtc  34-vcl_discard.vtc
src/tests/header/: append.vtc  append_maxhdr_overflow.vtc  append_overflow.vtc  get.vtc  regsub.vtc
src/tests/saintmode/: test02.vtc  test06.vtc  test07.vtc
src/tests/str/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test08.vtc
src/tests/tcp/: 02-congestion.vtc
src/tests/uuid/: 01-get_rand_uuid.vtc
src/tests/var/: test01.vtc  test02.vtc  test06.vtc
src/tests/vsthrottle/: test03.vtc  test04.vtc  test05.vtc  test06.vtc
src/tests/xkey/: test01.vtc  test02.vtc  test03.vtc  test05.vtc  test06.vtc  test07.vtc  test09.vtc  test10.vtc  test11.vtc  test12.vtc  test13.vtc  test14.vtc
